fix: :lipstick: Fix flickering of wisdom

--- a/src/assets/style/_animations.scss
+++ b/src/assets/style/_animations.scss
@@ -102,8 +102,8 @@
  */
 @-webkit-keyframes fade-in-left {
     0% {
-      -webkit-transform: translateX(-50px);
-              transform: translateX(-50px);
+      -webkit-transform: translateX(-10px);
+              transform: translateX(-10px);
       opacity: 0;
     }
     100% {
@@ -114,8 +114,8 @@
   }
   @keyframes fade-in-left {
     0% {
-      -webkit-transform: translateX(-50px);
-              transform: translateX(-50px);
+      -webkit-transform: translateX(-10px);
+              transform: translateX(-10px);
       opacity: 0;
     }
     100% {
